--- a/ComeniusCarrousel/Web.config
+++ b/ComeniusCarrousel/Web.config
@@ -10,4 +10,11 @@
             <add invariant="System.Data.SqlServerCe.4.0" name="Microsoft® SQL Server® Compact 4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
         </DbProviderFactories>
     </system.data>
+    <system.net>
+	    <mailSettings>
+		    <smtp deliveryMethod="SpecifiedPickupDirectory">
+			    <specifiedPickupDirectory pickupDirectoryLocation="C:\Mail\"/>
+		    </smtp>
+	    </mailSettings>
+    </system.net>
 </configuration>
