--- a/ComeniusCarrousel/Web.config
+++ b/ComeniusCarrousel/Web.config
@@ -12,8 +12,12 @@
     </system.data>
     <system.net>
 	    <mailSettings>
-		    <smtp deliveryMethod="SpecifiedPickupDirectory">
-			    <specifiedPickupDirectory pickupDirectoryLocation="C:\Mail\"/>
+		    <smtp deliveryMethod="network">
+			    <network
+                    host="ex2013.csg-comenius.nl"
+                    port="25"
+                    defaultCredentials="true"
+                />
 		    </smtp>
 	    </mailSettings>
     </system.net>
