--- a/ComeniusCarrousel/Web.config
+++ b/ComeniusCarrousel/Web.config
@@ -12,7 +12,7 @@
     </system.data>
     <system.net>
 	    <mailSettings>
-		    <smtp deliveryMethod="network">
+		    <smtp deliveryMethod="Network" from="profielkeuze@csg-comenius.nl">
 			    <network
                     host="ex2013.csg-comenius.nl"
                     port="25"
